basic genai setup

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,6 +5,9 @@ SUPABASE_ANON_KEY=your_supabase_anon_key_here
 # Optional: Service role key for admin operations
 SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key_here
 
+# Google Generative AI (Required)
+GOOGLE_API_KEY=your_google_api_key_here
+
 # Application Settings
 SECRET_KEY=your_secret_key_here
 DEBUG=true
