--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,3 +5,8 @@ python-multipart==0.0.20
 supabase==2.15.3
 python-dotenv==1.1.0
 httpx==0.28.1
+google-generativeai==0.8.5
+google-cloud-aiplatform==1.97.0
+google-api-python-client==2.173.0
+google-auth-oauthlib==1.2.2
+black==25.1.0
