--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -11,4 +11,5 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=
 NEXT_PUBLIC_SUPABASE_URL=
 SUPABASE_SERVICE_ROLE_KEY=
 POSTGRES_URL_NON_POOLING=
-BACKEND_URL=
+NEXT_PUBLIC_BACKEND_URL=
+NODE_ENV=
