--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,10 +6,13 @@ SUPABASE_ANON_KEY=your_supabase_anon_key_here
 SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key_here
 
 # Google Generative AI (Required)
-GOOGLE_API_KEY=your_google_api_key_here
+GEMINI_API_KEY=your_google_api_key_here
+
+# Google Drive Configuration (Optional)
+GOOGLE_CREDENTIALS_PATH=credentials.json
+GOOGLE_TOKEN_PATH=token.json
 
 # Application Settings
-SECRET_KEY=your_secret_key_here
 DEBUG=true
 
 # Server Settings
