--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,4 +9,4 @@ google-generativeai==0.8.5
 google-cloud-aiplatform==1.97.0
 google-api-python-client==2.173.0
 google-auth-oauthlib==1.2.2
-black==25.1.0
+autopep8==2.3.2
