--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,15 +1,4 @@
-POSTGRES_URL=
-POSTGRES_USER=
-POSTGRES_HOST=
-SUPABASE_JWT_SECRET=
-NEXT_PUBLIC_SUPABASE_ANON_KEY=
-POSTGRES_PRISMA_URL=
-POSTGRES_PASSWORD=
-POSTGRES_DATABASE=
-SUPABASE_URL=
-NEXT_PUBLIC_SUPABASE_ANON_KEY=
-NEXT_PUBLIC_SUPABASE_URL=
-SUPABASE_SERVICE_ROLE_KEY=
-POSTGRES_URL_NON_POOLING=
-NEXT_PUBLIC_BACKEND_URL=
-NODE_ENV=
+NEXT_PUBLIC_SUPABASE_URL=""
+NEXT_PUBLIC_SUPABASE_ANON_KEY=""
+BACKEND_URL="http://localhost:8000"
+NEXT_PUBLIC_NODE_ENV="development"
