--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,4 +1,9 @@
 NEXT_PUBLIC_SUPABASE_URL=""
 NEXT_PUBLIC_SUPABASE_ANON_KEY=""
+NEXT_PUBLIC_SUPABASE_SERVICE_ROLE_KEY=""
 BACKEND_URL="http://localhost:8000"
 NEXT_PUBLIC_NODE_ENV="development"
+NEXT_PUBLIC_APP_URL="http://localhost:3000"
+ADMIN_EMAIL="admin@example.com"
+ADMIN_PASSWORD="secure_admin_password_123"
+NEXTAUTH_SECRET="your-super-secret-key-here"
