--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "@supabase/auth-helpers-nextjs": "^0.8.7",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@tailwindcss/typography": "^0.5.16",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -39,6 +40,7 @@
     "immer": "latest",
     "isomorphic-dompurify": "latest",
     "lucide-react": "^0.454.0",
+    "marked": "^15.0.12",
     "nanoid": "latest",
     "next": "14.2.16",
     "next-themes": "latest",
