--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -3,5 +3,6 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=""
 NEXT_PUBLIC_SUPABASE_SERVICE_ROLE_KEY=""
 BACKEND_URL="http://localhost:8000"
 NEXT_PUBLIC_NODE_ENV="development"
+NODE_ENV="development"
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
 NEXTAUTH_SECRET="your-super-secret-key-here"
