--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -6,3 +6,5 @@ NEXT_PUBLIC_NODE_ENV="development"
 NODE_ENV="development"
 NEXT_PUBLIC_APP_URL="http://localhost:3000"
 NEXTAUTH_SECRET="your-super-secret-key-here"
+SENDGRID_API_KEY=""
+SENDGRID_SENDER_EMAIL=""
