--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,12 +48,14 @@
     "nanoid": "latest",
     "next": "14.2.16",
     "next-themes": "latest",
+    "nodemailer": "^7.0.5",
     "react": "^18",
     "react-dom": "^18",
     "recharts": "latest",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "use-sync-external-store": "latest",
+    "uuid": "^11.1.0",
     "zod": "^3.25.67",
     "zustand": "latest"
   },
