--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,7 @@ httpx==0.28.1
 google-generativeai==0.8.5
 google-cloud-aiplatform==1.97.0
 google-api-python-client==2.173.0
+google-auth-httplib2==0.2.0
 google-auth-oauthlib==1.2.2
 autopep8==2.3.2
 chromadb==1.0.15
