--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,11 +10,10 @@ google-cloud-aiplatform==1.97.0
 google-api-python-client==2.173.0
 google-auth-httplib2==0.2.0
 google-auth-oauthlib==1.2.2
-autopep8==2.3.2
 chromadb==1.0.15
 langchain==0.3.27
 langchain-chroma==0.2.5
 langchain-community==0.3.27
+langchain-core==0.3.72
 langchain-google-genai==2.0.10
-sentence-transformers==5.0.0
 PyPDF2==3.0.1
